--- a/html/style/main.css
+++ b/html/style/main.css
@@ -19,7 +19,10 @@ h3 a {
 	font-size:18px;
 }
 
-
+#title {
+	font-weight:bold;
+	border-bottom:1px solid black;
+}
 
 #container {
     position:relative; 
@@ -33,6 +36,7 @@ h3 a {
 	width:100%;
 	height: 300px;
 	margin-bottom:40px;
+	margin-top:20px;
 }
 
 #radio_choice { 
@@ -47,3 +51,6 @@ h3 a {
 	font-size:20px;
 }
 
+.login_switch a {
+	font-size:20px;
+}
