--- a/html/style/main.css
+++ b/html/style/main.css
@@ -44,7 +44,12 @@ h3 a {
 }
 
 #your_station_link {
-	text-align:center;	
+	text-align:center;
+	width:250px;
+	font-size:22px;
+	height:40px;
+	margin:10px auto 40px auto;
+	position:relative;
 }
 
 #your_station_link  a{
@@ -53,4 +58,10 @@ h3 a {
 
 .login_switch a {
 	font-size:20px;
+}
+
+#journey_reason {
+	width:100%;
+	height:100px;
+	
 }
