--- a/html/style/main.css
+++ b/html/style/main.css
@@ -64,4 +64,17 @@ h3 a {
 	width:100%;
 	height:100px;
 	
+
+}
+
+
+#left_column { 
+	float:left;
+	width:350px;
+	margin-right:50px;
+}
+
+#right_column { 
+	float:left;
+	width:350px;	
 }
