--- a/html/style/main.css
+++ b/html/style/main.css
@@ -52,6 +52,15 @@ h3 a {
 	position:relative;
 }
 
+.big_button { 
+	text-align:center;
+	width:250px;
+	font-size:22px;
+	height:40px;
+	margin:10px auto 40px auto;
+	position:relative;	
+}
+
 #your_station_link  a{
 	font-size:20px;
 }
@@ -66,7 +75,6 @@ h3 a {
 	
 
 }
-
 
 #left_column { 
 	float:left;
